--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,69 @@
 absl-py==0.8.1
 astor==0.8.0
+blis==0.4.1
+boto==2.49.0
+boto3==1.10.34
+botocore==1.13.34
 cachetools==3.1.1
+catalogue==0.0.8
 certifi==2019.9.11
 chardet==3.0.4
+cycler==0.10.0
+cymem==2.0.3
+docutils==0.15.2
 gast==0.2.2
+gensim==3.8.1
 google-auth==1.7.0
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
 grpcio==1.25.0
 h5py==2.10.0
 idna==2.8
+importlib-metadata==1.2.0
+jmespath==0.9.4
 joblib==0.14.0
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
 Markdown==3.1.1
+matplotlib==3.1.2
+more-itertools==8.0.2
+murmurhash==1.0.2
 nltk==3.4.5
 numpy==1.17.4
 oauthlib==3.1.0
 opt-einsum==3.1.0
 pandas==0.25.3
 Pillow==6.2.1
+plac==1.1.3
+polyglot==16.7.4
+preshed==3.0.2
 protobuf==3.10.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.7
-python-dateutil==2.8.1
+pyparsing==2.4.5
+python-dateutil==2.8.0
 pytz==2019.3
 PyYAML==5.1.2
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
+s3transfer==0.2.1
 scikit-learn==0.21.3
 scipy==1.3.2
 six==1.13.0
+smart-open==1.9.0
+spacy==2.2.3
+srsly==0.2.0
 tensorboard==2.0.1
 tensorflow==2.0.0
 tensorflow-estimator==2.0.1
 termcolor==1.1.0
+thinc==7.3.1
+tqdm==4.40.1
 urllib3==1.25.7
+wasabi==0.4.2
 Werkzeug==0.16.0
 wrapt==1.11.2
+zipp==0.6.0
