--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==0.8.1
+appdirs==1.4.3
 astor==0.8.0
 blis==0.4.1
 boto==2.49.0
@@ -42,6 +43,7 @@ preshed==3.0.2
 protobuf==3.10.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.7
+PyHyphen==3.0.1
 pyparsing==2.4.5
 python-dateutil==2.8.0
 pytz==2019.3
@@ -60,6 +62,7 @@ tensorboard==2.0.1
 tensorflow==2.0.0
 tensorflow-estimator==2.0.1
 termcolor==1.1.0
+textatistic==0.0.1
 thinc==7.3.1
 tqdm==4.40.1
 urllib3==1.25.7
